parser/parser.parser.output
Terminals unused in grammar

   "-"
   "*"
   "/"
   "%"
   "&"
   "|"
   "^"
   "~"
   ".."
   "string"
   "error token"
   UPLUS
   UMIN
   TRY


Grammar

    0 $accept: root $end

    1 root: global_decl_list

    2 global_decl_list: global_decl_list function
    3                 | %empty

    4 function: rettype "identifier" "(" arg_list ")" "{" statement_list "}"

    5 arg_list: %empty

    6 statement_list: statement_list statement
    7               | %empty

    8 statement: ";"
    9          | expression ";"

   10 expression: lvalue
   11           | calc_expression

   12 calc_expression: rvalue
   13                | expression "=" expression
   14                | expression "+" expression
   15                | "(" calc_expression ")"

   16 lvalue: "identifier"
   17       | "(" lvalue ")"

   18 rvalue: constant

   19 constant: "integer"
   20         | "true"
   21         | "false"

   22 datatype: "u32"

   23 rettype: datatype
   24        | "void"


Terminals, with rules where they appear

$end (0) 0
error (256)
"false" (258) 21
"true" (259) 20
"u32" (260) 22
"void" (261) 24
";" (262) 8 9
"=" (263) 13
"+" (264) 14
"-" (265)
"*" (266)
"/" (267)
"%" (268)
"&" (269)
"|" (270)
"^" (271)
"~" (272)
".." (273)
"(" (274) 4 15 17
")" (275) 4 15 17
"{" (276) 4
"}" (277) 4
"integer" <integer> (278) 19
"identifier" <str> (279) 4 16
"string" <str> (280)
"error token" (281)
UPLUS (282)
UMIN (283)
TRY (284)


Nonterminals, with rules where they appear

$accept (30)
    on left: 0
root (31)
    on left: 1, on right: 0
global_decl_list <node> (32)
    on left: 2 3, on right: 1 2
function <node> (33)
    on left: 4, on right: 2
arg_list <node> (34)
    on left: 5, on right: 4
statement_list <node> (35)
    on left: 6 7, on right: 4 6
statement <node> (36)
    on left: 8 9, on right: 6
expression <node> (37)
    on left: 10 11, on right: 9 13 14
calc_expression <node> (38)
    on left: 12 13 14 15, on right: 11 15
lvalue <node> (39)
    on left: 16 17, on right: 10 17
rvalue <node> (40)
    on left: 18, on right: 12
constant <node> (41)
    on left: 19 20 21, on right: 18
datatype <type> (42)
    on left: 22, on right: 23
rettype <type> (43)
    on left: 23 24, on right: 4


State 0

    0 $accept: . root $end

    $default  reduce using rule 3 (global_decl_list)

    root              go to state 1
    global_decl_list  go to state 2


State 1

    0 $accept: root . $end

    $end  shift, and go to state 3


State 2

    1 root: global_decl_list .
    2 global_decl_list: global_decl_list . function

    "u32"   shift, and go to state 4
    "void"  shift, and go to state 5

    $default  reduce using rule 1 (root)

    function  go to state 6
    datatype  go to state 7
    rettype   go to state 8


State 3

    0 $accept: root $end .

    $default  accept


State 4

   22 datatype: "u32" .

    $default  reduce using rule 22 (datatype)


State 5

   24 rettype: "void" .

    $default  reduce using rule 24 (rettype)


State 6

    2 global_decl_list: global_decl_list function .

    $default  reduce using rule 2 (global_decl_list)


State 7

   23 rettype: datatype .

    $default  reduce using rule 23 (rettype)


State 8

    4 function: rettype . "identifier" "(" arg_list ")" "{" statement_list "}"

    "identifier"  shift, and go to state 9


State 9

    4 function: rettype "identifier" . "(" arg_list ")" "{" statement_list "}"

    "("  shift, and go to state 10


State 10

    4 function: rettype "identifier" "(" . arg_list ")" "{" statement_list "}"

    $default  reduce using rule 5 (arg_list)

    arg_list  go to state 11


State 11

    4 function: rettype "identifier" "(" arg_list . ")" "{" statement_list "}"

    ")"  shift, and go to state 12


State 12

    4 function: rettype "identifier" "(" arg_list ")" . "{" statement_list "}"

    "{"  shift, and go to state 13


State 13

    4 function: rettype "identifier" "(" arg_list ")" "{" . statement_list "}"

    $default  reduce using rule 7 (statement_list)

    statement_list  go to state 14


State 14

    4 function: rettype "identifier" "(" arg_list ")" "{" statement_list . "}"
    6 statement_list: statement_list . statement

    "false"       shift, and go to state 15
    "true"        shift, and go to state 16
    ";"           shift, and go to state 17
    "("           shift, and go to state 18
    "}"           shift, and go to state 19
    "integer"     shift, and go to state 20
    "identifier"  shift, and go to state 21

    statement        go to state 22
    expression       go to state 23
    calc_expression  go to state 24
    lvalue           go to state 25
    rvalue           go to state 26
    constant         go to state 27


State 15

   21 constant: "false" .

    $default  reduce using rule 21 (constant)


State 16

   20 constant: "true" .

    $default  reduce using rule 20 (constant)


State 17

    8 statement: ";" .

    $default  reduce using rule 8 (statement)


State 18

   15 calc_expression: "(" . calc_expression ")"
   17 lvalue: "(" . lvalue ")"

    "false"       shift, and go to state 15
    "true"        shift, and go to state 16
    "("           shift, and go to state 18
    "integer"     shift, and go to state 20
    "identifier"  shift, and go to state 21

    expression       go to state 28
    calc_expression  go to state 29
    lvalue           go to state 30
    rvalue           go to state 26
    constant         go to state 27


State 19

    4 function: rettype "identifier" "(" arg_list ")" "{" statement_list "}" .

    $default  reduce using rule 4 (function)


State 20

   19 constant: "integer" .

    $default  reduce using rule 19 (constant)


State 21

   16 lvalue: "identifier" .

    $default  reduce using rule 16 (lvalue)


State 22

    6 statement_list: statement_list statement .

    $default  reduce using rule 6 (statement_list)


State 23

    9 statement: expression . ";"
   13 calc_expression: expression . "=" expression
   14                | expression . "+" expression

    ";"  shift, and go to state 31
    "="  shift, and go to state 32
    "+"  shift, and go to state 33


State 24

   11 expression: calc_expression .

    $default  reduce using rule 11 (expression)


State 25

   10 expression: lvalue .

    $default  reduce using rule 10 (expression)


State 26

   12 calc_expression: rvalue .

    $default  reduce using rule 12 (calc_expression)


State 27

   18 rvalue: constant .

    $default  reduce using rule 18 (rvalue)


State 28

   13 calc_expression: expression . "=" expression
   14                | expression . "+" expression

    "="  shift, and go to state 32
    "+"  shift, and go to state 33


State 29

   11 expression: calc_expression .
   15 calc_expression: "(" calc_expression . ")"

    ")"  shift, and go to state 34

    $default  reduce using rule 11 (expression)


State 30

   10 expression: lvalue .
   17 lvalue: "(" lvalue . ")"

    ")"  shift, and go to state 35

    $default  reduce using rule 10 (expression)


State 31

    9 statement: expression ";" .

    $default  reduce using rule 9 (statement)


State 32

   13 calc_expression: expression "=" . expression

    "false"       shift, and go to state 15
    "true"        shift, and go to state 16
    "("           shift, and go to state 18
    "integer"     shift, and go to state 20
    "identifier"  shift, and go to state 21

    expression       go to state 36
    calc_expression  go to state 24
    lvalue           go to state 25
    rvalue           go to state 26
    constant         go to state 27


State 33

   14 calc_expression: expression "+" . expression

    "false"       shift, and go to state 15
    "true"        shift, and go to state 16
    "("           shift, and go to state 18
    "integer"     shift, and go to state 20
    "identifier"  shift, and go to state 21

    expression       go to state 37
    calc_expression  go to state 24
    lvalue           go to state 25
    rvalue           go to state 26
    constant         go to state 27


State 34

   15 calc_expression: "(" calc_expression ")" .

    $default  reduce using rule 15 (calc_expression)


State 35

   17 lvalue: "(" lvalue ")" .

    $default  reduce using rule 17 (lvalue)


State 36

   13 calc_expression: expression . "=" expression
   13                | expression "=" expression .
   14                | expression . "+" expression

    "="  shift, and go to state 32
    "+"  shift, and go to state 33

    $default  reduce using rule 13 (calc_expression)


State 37

   13 calc_expression: expression . "=" expression
   14                | expression . "+" expression
   14                | expression "+" expression .

    $default  reduce using rule 14 (calc_expression)
